test/src/e2e_vm_tests/test_programs/should_fail/predicate_while_dep/src/loop.sw
library loop;

pub fn loop() -> bool {
    let mut x = 0;
    while true { x += 1; }

    true
}
